kubernetes-dashboard/templates/kube-dashboard-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-dashboard-ingress-route
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kube.interpolar.ch`)
      priority: 10
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: kong-proxy
      middlewares:
        - name: secure
          namespace: traefik
    - kind: Rule
      match: Host(`kube.interpolar.ch`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: kong-proxy
          scheme: h2c
      middlewares:
        - name: secure
          namespace: traefik
  #tls:
  #  certResolver: cf-xxx
